src/personal-finance/shared/layout/pages-footer/pages-footer.component.less
:host {
    &:not(.pfm-app) {
        .top-footer {
            background-color: #133240;
        }
        .bottom-footer {
            background-color: #0c2531;
        }
    }
    &.pfm-app {
        .top-footer {
            background-color: #000;
        }
        .bottom-footer {
            background-color: #052941;
        }
    }

    .top-container {
        width: 100%;
    }

    .top-footer {
        padding: 14px 0;
        text-align: center;
    }
    .footer-social {
        margin-top: 32px;
    }
    .footer-social-list {
        list-style-type: none;
        padding-left: 0;
    }
    .footer-social-list-item {
        display: inline-block;
        padding: 0 16px;
    }
    .footer-social-list-item-link {
        display: block;
    }
    svg {
        display: block;
        transition: fill .4s ease;
    }
    circle, g, path {
        transition: fill .4s ease;
    }
    svg {
        display: block;
        transition: fill .4s ease;
    }
    circle:hover {
        fill: #fff;
        fill-opacity: 1;
    }
    path:hover {
        fill: #ed9d1a;
        fill-opacity: 1;
    }
    .footer-menu {
        display: flex;
        padding-left: 0;
        list-style-type: none;
        justify-content: space-between;
        align-items: center;
        & > * {
            width: 100%;
        }
        @media (min-width: 992px) {
            flex-wrap: nowrap;
            & > * {
                width: auto;
            }
        }
        @media (min-width: 1200px) {
            white-space: nowrap;
        }
        img.secure-logo {
            margin-left: 30px;
        }
        img.small-logo {
            width: 80px;
        }
        .copyright {
            font-family: Poppins;
            font-size: 14px;
            font-weight: 600;
            font-style: normal;
            font-stretch: normal;
            line-height: normal;
            letter-spacing: normal;
            color: #ffffff;
        }

        @media (max-width: 730px) {
            justify-content: space-around;
            .footer-menu-list {
                //margin: 30px 0px;
            }
            .footer-menu-block {
                padding: 0 15px;
            }
        }

        &-list {
            padding-left: 0;
            display: inline-block;
        }
        &-item {
            display: inline-block;
            padding: 14px 15px 0 15px;

             &:last-child {
                padding-right: 0;
            }
        }
        &-link {
            font-family: Poppins;
            font-size: 14px;
            font-weight: 600;
            font-style: normal;
            font-stretch: normal;
            line-height: normal;
            letter-spacing: normal;
            color: #fff;
            text-align: center;
            text-decoration: none;
            &:hover,
            &:focus {
                color: rgba(255, 255, 255, .6);
            }
        }
    }
    .copyright {
        //float: left;
        font-family: Open Sans;
        font-size: 14px;
        font-weight: normal;
        font-style: normal;
        font-stretch: normal;
        line-height: normal;
        letter-spacing: normal;
        color: #ffffff;
    }
    .bottom-footer {
        min-height: 80px;
        padding: 20px 0;
        font-size: 13px;
        line-height: 1.23;
        letter-spacing: 0.2px;
        text-align: center;
        color: rgba(255, 255, 255, 0.5);
        .bottom-container {
            @media (max-width: 638px) {
                display: flex;
                justify-content: space-around;
                flex-wrap: wrap;
                .copyright {
                    order: 2;
                    margin-top: 20px;
                }

                .footer-menu {
                    order: 1;
                }
            }

            .footer-menu {
                float: right;
                list-style-type: none;
                margin: 0;
                li {
                    display: inline-block;
                    a {
                        display: block;
                        color: #fff;
                        padding: 0px 20px;
                        font-family: Open Sans;
                        font-size: 14px;
                        font-weight: normal;
                        font-style: normal;
                        font-stretch: normal;
                        line-height: normal;
                        letter-spacing: normal;
                    }
                    &:last-child {
                        a {
                            padding-right: 0;
                        }
                    }
                }
            }
        }
    }
}

/deep/ body.lend-space {
    modal-dialog {
        .close-dialog {
            background: #000!important;
            &:before, &:after {
                background: #FFF!important;
            }
        }
        .mat-dialog-header {
            background: #000!important;
            dx-text-box {
                background: transparent!important;
                input {
                    color: #FFF!important;
                    background: transparent!important;
                }
            }
            button {
                border-radius: 5px!important;
                margin-right: 10px!important;
            }
        }
        mat-dialog-content {
            #content {
                background: #262626!important;
            }
        }
    }
}

